[metadata]
name = pi_robot_car_auth_api
version = 0.0.1
license = BSD 3-Clause License
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = False
package_dir=
    client = replies/client
# packages = client
install_requires = 
    py-mqtt

# [options.packages.find]
# # where = api
# include = api
# exclude = 
#     test*
#     config
#     auth